--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -71,6 +71,8 @@
 
                 padding: 15px;
 
+                font-family: -apple-system, Segoe UI, Roboto, Oxygen, sans-serif;
+
                 width: 200%;
                 min-height: 200px;
 
