--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,8 +9,9 @@
 
 html,
 body {
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: -apple-system, Segoe UI, Roboto, Oxygen,
+        sans-serif;
+
 }
 
 @media (prefers-color-scheme: dark) {
